# students_helper

./: README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: codecov.yml  coverage.yml  main.yml
base/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py
base/static/base/: base_style.css  confirm.css  error.css  main.css  main2.css  pass_change.css  pass_conf.css  profile_update.css  register.css  reset_done.css  reset_password.css
base/templates/base/: base.html  confirm_email.html  login.html  main.html  register.html  template_activate_account.html  user_update.html
student_helper_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: 403.html
todolist/: admin.py  forms.py  models.py  test_views.py  urls.py  views.py
todolist/migrations/: 0001_initial.py  0002_project_task_project.py  0003_priority_task_priority_level.py  0004_alter_task_priority_level_delete_priority.py  0005_alter_task_priority_level_and_more.py  0006_alter_task_priority_level.py  0007_alter_task_priority_level.py  0008_alter_task_priority_level.py
todolist/static/todolist/: confirm_delete.css  style.css  style_form.css  style_form_project.css  task_details.css
todolist/templates/todolist/: base.html  login.html  project.html  project_confirm_delete.html  project_form.html  register.html  task.html  task_confirm_delete.html  task_form.html  task_list.html
translator/: urls.py  views.py
translator/static/translator/: style.css
translator/templates/translator/: translate.html
(+10 files in other folders)
