[tool.poetry]
name = "student-helper-project"
version = "0.1.0"
description = ""
authors = ["galkowskim <mikolaj.galkowski7@gmail.com>"]
readme = "README.md"
packages = [{include = "student_helper_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-crispy-forms = "^1.14.0"
googletrans = "4.0.0-rc1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
